@@ -7116,6 +7116,9 @@
                         <listitem>
                             <para>Fixed problem #620650 (buffer overflow in load_fav_apps())</para>
                         </listitem>
+                        <listitem>
+                            <para>Fixed problem with editing options for favourite apps and devices</para>
+                        </listitem>
                     </itemizedlist>
                 </para>
             </entry>
